--- a/src/input/input.module.css
+++ b/src/input/input.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  width: 25rem;
+  width: 23rem;
   max-width: 30rem;
 }
 
@@ -18,7 +18,8 @@
 
 .userInput {
   padding: 0.5rem;
-  width: 18rem;
+  width: 16rem;
+  max-width: 18rem;
   border-radius: 8px;
   background-color: #f7f7f7;
 }
@@ -31,9 +32,10 @@
   display: flex;
   justify-content: space-between;
   padding: 0.5rem;
+  margin-bottom: 10px;
   border-radius: 8px;
   background-color: #f7f7f7;
-  width: 23rem;
+  width: 20rem;
   max-width: 23rem;
 }
 
