--- a/src/input/input.module.css
+++ b/src/input/input.module.css
@@ -19,9 +19,12 @@
 .userInput {
   padding: 0.5rem;
   width: 16rem;
-  max-width: 18rem;
+  max-width: 16rem;
   border-radius: 8px;
   background-color: #f7f7f7;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 .addBtn {
   margin-left: 0.5rem;
